// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slate converts bold.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "bold",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts bold.json to and from CiceroMark 2`] = `"**bold**"`;

exports[`slate converts bold.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "bold": true,
            "object": "text",
            "text": "bold",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts bold.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "bold",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts boldem.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "bold",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts boldem.json to and from CiceroMark 2`] = `"_**bold**_"`;

exports[`slate converts boldem.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "bold": true,
            "italic": true,
            "object": "text",
            "text": "bold",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts boldem.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "bold",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts code.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "some code",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts code.json to and from CiceroMark 2`] = `"\`some code\`"`;

exports[`slate converts code.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "code": true,
            "object": "text",
            "text": "some code",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts code.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "some code",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts codeblock.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "text": "
this
is a
code block.
",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "end.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts codeblock.json to and from CiceroMark 2`] = `
"\`\`\` 
this
is a
code block.
\`\`\`



end."
`;

exports[`slate converts codeblock.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "object": "text",
                "text": "this
is a
code block.
",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "paragraph",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "code_block",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "end.",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts codeblock.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "text": "
this
is a
code block.
",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "end.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts commonmark.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Try CommonMark",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "You can try CommonMark here.  This dingus is powered by",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "https://github.com/jgm/commonmark.js",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " commonmark.js",
            },
          ],
          "title": "",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ", the JavaScript reference implementation.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "item one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "item two",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts commonmark.json to and from CiceroMark 2`] = `
"Try CommonMark
----

You can try CommonMark here.  This dingus is powered by[ commonmark.js](https://github.com/jgm/commonmark.js), the JavaScript reference implementation.
1. item one
2. item two"
`;

exports[`slate converts commonmark.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "Try CommonMark",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "heading_two",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "You can try CommonMark here.  This dingus is powered by",
          },
          Object {
            "children": Array [
              Object {
                "object": "text",
                "text": " commonmark.js",
              },
            ],
            "data": Object {
              "href": "https://github.com/jgm/commonmark.js",
              "title": "",
            },
            "object": "inline",
            "type": "link",
          },
          Object {
            "object": "text",
            "text": ", the JavaScript reference implementation.",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "object": "text",
                    "text": "item one",
                  },
                ],
                "data": Object {},
                "object": "block",
                "type": "paragraph",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "list_item",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "object": "text",
                    "text": "item two",
                  },
                ],
                "data": Object {},
                "object": "block",
                "type": "paragraph",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "list_item",
          },
        ],
        "data": Object {
          "delimiter": "period",
          "start": "1",
          "tight": "true",
        },
        "object": "block",
        "type": "ol_list",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts commonmark.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Try CommonMark",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "You can try CommonMark here.  This dingus is powered by",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "https://github.com/jgm/commonmark.js",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " commonmark.js",
            },
          ],
          "title": "",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ", the JavaScript reference implementation.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "item one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "item two",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts empty.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts empty.json to and from CiceroMark 2`] = `""`;

exports[`slate converts empty.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts empty.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts headings.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H1",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H2",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "3",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H3",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "4",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H4",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "5",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H5",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "6",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H6",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "####### Text!!",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "end.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts headings.json to and from CiceroMark 2`] = `
"## H1


## H2


### H3


#### H4


##### H5


###### H6


\\\\####### Text!!


end.
"
`;

exports[`slate converts headings.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "H1",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "heading_two",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "H2",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "heading_two",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "H3",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "heading_three",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "H4",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "heading_four",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "H5",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "heading_five",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "H6",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "heading_six",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "####### Text!!",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "end.",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts headings.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H1",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H2",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "3",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H3",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "4",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H4",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "5",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H5",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "6",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "H6",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "####### Text!!",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "end.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts html.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is text with ",
        },
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "text": "<foo/>",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " inside it",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "text": "
<foo/>",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is more text",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts html.json to and from CiceroMark 2`] = `
"This is text with <foo/> inside it

<foo/>

This is more text
"
`;

exports[`slate converts html.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "This is text with ",
          },
          Object {
            "children": Array [
              Object {
                "object": "text",
                "text": "",
              },
            ],
            "data": Object {
              "content": "<foo/>",
            },
            "object": "inline",
            "type": "html_inline",
          },
          Object {
            "object": "text",
            "text": " inside it",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "html": true,
                "object": "text",
                "text": "<foo/>",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "paragraph",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "html_block",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "This is more text",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts html.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is text with ",
        },
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "text": "<foo/>",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " inside it",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "text": "
<foo/>",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is more text",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts html-block.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "text": "
<foo>
this
is an
html block.
</foo>
end.",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts html-block.json to and from CiceroMark 2`] = `
"<foo>
this
is an
html block.
</foo>
end."
`;

exports[`slate converts html-block.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "html": true,
                "object": "text",
                "text": "<foo>
this
is an
html block.
</foo>
end.",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "paragraph",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "html_block",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts html-block.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "text": "
<foo>
this
is an
html block.
</foo>
end.",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts image.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an image",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Image",
          "destination": "https://studio.accordproject.org/static/img/logo.png",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "",
            },
          ],
          "title": "title",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts image.json to and from CiceroMark 2`] = `
"This is an image

![ap_logo](https://studio.accordproject.org/static/img/logo.png \\"title\\")"
`;

exports[`slate converts image.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "This is an image",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "",
          },
          Object {
            "children": Array [
              Object {
                "object": "text",
                "text": "",
              },
            ],
            "data": Object {
              "href": "https://studio.accordproject.org/static/img/logo.png",
              "title": "title",
            },
            "object": "inline",
            "type": "image",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts image.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an image",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Image",
          "destination": "https://studio.accordproject.org/static/img/logo.png",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "",
            },
          ],
          "title": "title",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts image-notitle.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an image",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Image",
          "destination": "https://studio.accordproject.org/static/img/logo.png",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "",
            },
          ],
          "title": "",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts image-notitle.json to and from CiceroMark 2`] = `
"This is an image

![ap_logo](https://studio.accordproject.org/static/img/logo.png)"
`;

exports[`slate converts image-notitle.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "This is an image",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "",
          },
          Object {
            "children": Array [
              Object {
                "object": "text",
                "text": "",
              },
            ],
            "data": Object {
              "href": "https://studio.accordproject.org/static/img/logo.png",
              "title": "",
            },
            "object": "inline",
            "type": "image",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts image-notitle.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an image",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Image",
          "destination": "https://studio.accordproject.org/static/img/logo.png",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "",
            },
          ],
          "title": "",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts italic.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "italic",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts italic.json to and from CiceroMark 2`] = `"*italic*"`;

exports[`slate converts italic.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "italic": true,
            "object": "text",
            "text": "italic",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts italic.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "italic",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts linebreak.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a",
        },
        Object {
          "$class": "org.accordproject.commonmark.Linebreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "linebreak in para 1.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "And this is para 2.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts linebreak.json to and from CiceroMark 2`] = `
"This is a  
linebreak in para 1.

And this is para 2."
`;

exports[`slate converts linebreak.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "This is a",
          },
          Object {
            "children": Array [
              Object {
                "object": "text",
                "text": "",
              },
            ],
            "data": Object {},
            "object": "inline",
            "type": "linebreak",
          },
          Object {
            "object": "text",
            "text": "linebreak in para 1.",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "And this is para 2.",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts linebreak.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a",
        },
        Object {
          "$class": "org.accordproject.commonmark.Linebreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "linebreak in para 1.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "And this is para 2.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts link.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "http://clause.io",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "link",
            },
          ],
          "title": "title",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts link.json to and from CiceroMark 2`] = `"a [link](http://clause.io \\"title\\")"`;

exports[`slate converts link.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "a ",
          },
          Object {
            "children": Array [
              Object {
                "object": "text",
                "text": "link",
              },
            ],
            "data": Object {
              "href": "http://clause.io",
              "title": "title",
            },
            "object": "inline",
            "type": "link",
          },
          Object {
            "object": "text",
            "text": "",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts link.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "http://clause.io",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "link",
            },
          ],
          "title": "title",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts link-notitle.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "http://clause.io",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "link",
            },
          ],
          "title": "",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts link-notitle.json to and from CiceroMark 2`] = `"a [link](http://clause.io)"`;

exports[`slate converts link-notitle.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "a ",
          },
          Object {
            "children": Array [
              Object {
                "object": "text",
                "text": "link",
              },
            ],
            "data": Object {
              "href": "http://clause.io",
              "title": "",
            },
            "object": "inline",
            "type": "link",
          },
          Object {
            "object": "text",
            "text": "",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts link-notitle.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "http://clause.io",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "link",
            },
          ],
          "title": "",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts linkcode.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "this is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "https://google.com",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Code",
              "text": "code link",
            },
          ],
          "title": "",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "this is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "code snippet",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts linkcode.json to and from CiceroMark 2`] = `
"this is a [\`code link\`](https://google.com)

this is a \`code snippet\`"
`;

exports[`slate converts linkcode.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "this is a ",
          },
          Object {
            "children": Array [
              Object {
                "code": true,
                "object": "text",
                "text": "code link",
              },
            ],
            "data": Object {
              "href": "https://google.com",
              "title": "",
            },
            "object": "inline",
            "type": "link",
          },
          Object {
            "object": "text",
            "text": "",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "this is a ",
          },
          Object {
            "code": true,
            "object": "text",
            "text": "code snippet",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts linkcode.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "this is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "https://google.com",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Code",
              "text": "code link",
            },
          ],
          "title": "",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "this is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "code snippet",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts linkem.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "this is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "https://google.com",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Emph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "code link",
                },
              ],
            },
          ],
          "title": "",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts linkem.json to and from CiceroMark 2`] = `
"this is a [*code link*](https://google.com)
"
`;

exports[`slate converts linkem.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "this is a ",
          },
          Object {
            "children": Array [
              Object {
                "italic": true,
                "object": "text",
                "text": "code link",
              },
            ],
            "data": Object {
              "href": "https://google.com",
              "title": "",
            },
            "object": "inline",
            "type": "link",
          },
          Object {
            "object": "text",
            "text": "",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts linkem.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "this is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "https://google.com",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Emph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "code link",
                },
              ],
            },
          ],
          "title": "",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts linkmixed.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "http://google.com",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "This is a ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Emph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "link",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " with ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Code",
              "text": "code",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " and ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "bold",
                },
              ],
            },
          ],
          "title": "",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts linkmixed.json to and from CiceroMark 2`] = `"[This is a *link* with \`code\` and **bold**](http://google.com)"`;

exports[`slate converts linkmixed.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "",
          },
          Object {
            "children": Array [
              Object {
                "object": "text",
                "text": "This is a ",
              },
              Object {
                "italic": true,
                "object": "text",
                "text": "link",
              },
              Object {
                "object": "text",
                "text": " with ",
              },
              Object {
                "code": true,
                "object": "text",
                "text": "code",
              },
              Object {
                "object": "text",
                "text": " and ",
              },
              Object {
                "bold": true,
                "object": "text",
                "text": "bold",
              },
            ],
            "data": Object {
              "href": "http://google.com",
              "title": "",
            },
            "object": "inline",
            "type": "link",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts linkmixed.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "http://google.com",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "This is a ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Emph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "link",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " with ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Code",
              "text": "code",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " and ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "bold",
                },
              ],
            },
          ],
          "title": "",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts linktext.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "this is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "https://google.com",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "code link",
            },
          ],
          "title": "",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts linktext.json to and from CiceroMark 2`] = `
"this is a [code link](https://google.com)
"
`;

exports[`slate converts linktext.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "this is a ",
          },
          Object {
            "children": Array [
              Object {
                "object": "text",
                "text": "code link",
              },
            ],
            "data": Object {
              "href": "https://google.com",
              "title": "",
            },
            "object": "inline",
            "type": "link",
          },
          Object {
            "object": "text",
            "text": "",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts linktext.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "this is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "https://google.com",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "code link",
            },
          ],
          "title": "",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts nested-list.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Prolog",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "item one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "item two",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark.List",
              "delimiter": undefined,
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark.Text",
                          "text": "sublist",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark.Text",
                          "text": "sublist",
                        },
                        Object {
                          "$class": "org.accordproject.commonmark.Softbreak",
                        },
                        Object {
                          "$class": "org.accordproject.commonmark.Text",
                          "text": "with some text in the same paragraph",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark.Text",
                      "text": "",
                    },
                  ],
                },
              ],
              "start": undefined,
              "tight": "true",
              "type": "bullet",
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Epilog",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts nested-list.json to and from CiceroMark 2`] = `
"Prolog
1. item one
2. item two
   - sublist
   - sublist
with some text in the same paragraph
   - 

Epilog
"
`;

exports[`slate converts nested-list.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "Prolog",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "object": "text",
                    "text": "item one",
                  },
                ],
                "data": Object {},
                "object": "block",
                "type": "paragraph",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "list_item",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "object": "text",
                    "text": "item two",
                  },
                ],
                "data": Object {},
                "object": "block",
                "type": "paragraph",
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "object": "text",
                            "text": "sublist",
                          },
                        ],
                        "data": Object {},
                        "object": "block",
                        "type": "paragraph",
                      },
                    ],
                    "data": Object {},
                    "object": "block",
                    "type": "list_item",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "object": "text",
                            "text": "sublist",
                          },
                          Object {
                            "children": Array [
                              Object {
                                "object": "text",
                                "text": "",
                              },
                            ],
                            "data": Object {},
                            "object": "inline",
                            "type": "softbreak",
                          },
                          Object {
                            "object": "text",
                            "text": "with some text in the same paragraph",
                          },
                        ],
                        "data": Object {},
                        "object": "block",
                        "type": "paragraph",
                      },
                    ],
                    "data": Object {},
                    "object": "block",
                    "type": "list_item",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "data": Object {},
                    "object": "block",
                    "type": "list_item",
                  },
                ],
                "data": Object {
                  "delimiter": undefined,
                  "start": undefined,
                  "tight": "true",
                },
                "object": "block",
                "type": "ul_list",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "list_item",
          },
        ],
        "data": Object {
          "delimiter": "period",
          "start": "1",
          "tight": "true",
        },
        "object": "block",
        "type": "ol_list",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "Epilog",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts nested-list.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Prolog",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "item one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "item two",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark.List",
              "delimiter": undefined,
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark.Text",
                          "text": "sublist",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark.Text",
                          "text": "sublist",
                        },
                        Object {
                          "$class": "org.accordproject.commonmark.Softbreak",
                        },
                        Object {
                          "$class": "org.accordproject.commonmark.Text",
                          "text": "with some text in the same paragraph",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark.Text",
                      "text": "",
                    },
                  ],
                },
              ],
              "start": undefined,
              "tight": "true",
              "type": "bullet",
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Epilog",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts ordered.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts ordered.json to and from CiceroMark 2`] = `
"1. one
2. two
3. three"
`;

exports[`slate converts ordered.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "object": "text",
                    "text": "one",
                  },
                ],
                "data": Object {},
                "object": "block",
                "type": "paragraph",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "list_item",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "object": "text",
                    "text": "two",
                  },
                ],
                "data": Object {},
                "object": "block",
                "type": "paragraph",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "list_item",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "object": "text",
                    "text": "three",
                  },
                ],
                "data": Object {},
                "object": "block",
                "type": "paragraph",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "list_item",
          },
        ],
        "data": Object {
          "delimiter": "period",
          "start": "1",
          "tight": "true",
        },
        "object": "block",
        "type": "ol_list",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts ordered.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts paragraphs.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "one",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "two",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "three",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts paragraphs.json to and from CiceroMark 2`] = `
"one

two

three"
`;

exports[`slate converts paragraphs.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "one",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "two",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "three",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts paragraphs.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "one",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "two",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "three",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts plain.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "plain",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts plain.json to and from CiceroMark 2`] = `"plain"`;

exports[`slate converts plain.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "plain",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts plain.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "plain",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts quote.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.BlockQuote",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "this is a quote",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts quote.json to and from CiceroMark 2`] = `"> this is a quote"`;

exports[`slate converts quote.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "block_quote": true,
        "children": Array [
          Object {
            "children": Array [
              Object {
                "object": "text",
                "text": "this is a quote",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "paragraph",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "block_quote",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts quote.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.BlockQuote",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "this is a quote",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts softbreak.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "softbreak in para 1.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "And this is para 2.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts softbreak.json to and from CiceroMark 2`] = `
"This is a
softbreak in para 1.

And this is para 2."
`;

exports[`slate converts softbreak.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "This is a",
          },
          Object {
            "children": Array [
              Object {
                "object": "text",
                "text": "",
              },
            ],
            "data": Object {},
            "object": "inline",
            "type": "softbreak",
          },
          Object {
            "object": "text",
            "text": "softbreak in para 1.",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "And this is para 2.",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts softbreak.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "softbreak in para 1.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "And this is para 2.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts text.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "plain ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "italic",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "bold",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "bold-italic",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "code",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts text.json to and from CiceroMark 2`] = `"plain *italic* **bold** ***bold-italic*** \`code\`"`;

exports[`slate converts text.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "plain ",
          },
          Object {
            "italic": true,
            "object": "text",
            "text": "italic",
          },
          Object {
            "object": "text",
            "text": " ",
          },
          Object {
            "bold": true,
            "object": "text",
            "text": "bold",
          },
          Object {
            "object": "text",
            "text": " ",
          },
          Object {
            "bold": true,
            "italic": true,
            "object": "text",
            "text": "bold-italic",
          },
          Object {
            "object": "text",
            "text": " ",
          },
          Object {
            "code": true,
            "object": "text",
            "text": "code",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts text.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "plain ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "italic",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "bold",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "bold-italic",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "code",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts thematicbreak.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.ThematicBreak",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "thematic break",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts thematicbreak.json to and from CiceroMark 2`] = `
"This is a

----

thematic break"
`;

exports[`slate converts thematicbreak.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "This is a",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "",
          },
        ],
        "data": Object {},
        "hr": true,
        "object": "block",
        "type": "horizontal_rule",
      },
      Object {
        "children": Array [
          Object {
            "object": "text",
            "text": "thematic break",
          },
        ],
        "data": Object {},
        "object": "block",
        "type": "paragraph",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts thematicbreak.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.ThematicBreak",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "thematic break",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts unordered.json to and from CiceroMark 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": undefined,
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": undefined,
      "tight": "true",
      "type": "bullet",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`slate converts unordered.json to and from CiceroMark 2`] = `
"* one
* two
* three"
`;

exports[`slate converts unordered.json to and from CiceroMark 3`] = `
Object {
  "document": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "object": "text",
                    "text": "one",
                  },
                ],
                "data": Object {},
                "object": "block",
                "type": "paragraph",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "list_item",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "object": "text",
                    "text": "two",
                  },
                ],
                "data": Object {},
                "object": "block",
                "type": "paragraph",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "list_item",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "object": "text",
                    "text": "three",
                  },
                ],
                "data": Object {},
                "object": "block",
                "type": "paragraph",
              },
            ],
            "data": Object {},
            "object": "block",
            "type": "list_item",
          },
        ],
        "data": Object {
          "delimiter": undefined,
          "start": undefined,
          "tight": "true",
        },
        "object": "block",
        "type": "ul_list",
      },
    ],
    "data": Object {},
    "object": "document",
  },
}
`;

exports[`slate converts unordered.json to and from CiceroMark 4`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": undefined,
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": undefined,
      "tight": "true",
      "type": "bullet",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;
